Fri Jul 30 02:34:43 CEST 1999  Marc Lehmann <pcg@goof.com>

        * app/gimpparasite.c: I escaped everything when writing out
        parasites with \, everything except the \ itself. Argh.

Fri Jul 30 02:01:16 CEST 1999  Marc Lehmann <pcg@goof.com>

        * docs/parasites.txt: add some suggested colour parasites (no icc
        profile).

Thu Jul 29 17:18:42 PDT 1999 Manish Singh <yosh@gimp.org>

	* tools/pdbgen/pdb/tools.pdb: hard code orientation constants for
	shear and flip too maintain backwards compatibility

	* app/gimpimage.h: remove ORIENTATION chop to avoid namespace
	collision

Thu Jul 29 23:58:08 1999  Tor Lillqvist  <tml@iki.fi>

	* app/makefile.{cygwin,msc}: Add gdiplay_color. Create gimp.def
 	from gimp.sym.

	* app/gimp.def: Removed.

	* libgimp/gimpenv.c (gimp_data_directory) (Win32): Also check for
	the executable being in the plug-ins subdirectory.

	* plug-ins/makefile.{cygwin,msc}: Install also GIMPressionist
 	brushes, papers and presets.

Thu Jul 29 03:20:36 1999  Jay Cox  <jaycox@earthlink.net>

	* app/paint_funcs.c, app/transform_core.c:  replace the cubic 
	functions with a better/faster version supplied by
	David Hodson <hodsond@acm.org>

	* app/brush_select.c: double clicking on a brush preview now opens up
	the brush editor.  Update the text displayed when the active brush
	changes size.

	* app/paint_funcs.c: slight modification to overlay_pixels.

Thu Jul 29 02:42:17 1999  Tor Lillqvist  <tml@iki.fi>

	* tools/pdbgen/pdb/channel.pdb: Remove a call to
 	channel_set_opacity() at a point where channel always is NULL,
 	causing a crash. The next statement calls channel_new() (passing
 	the opacity), and assigns its return value to channel, so there
 	shouldn't be any need to call channel_set_opacity()?

	* app/channel_cmds.c: Corresponding change in generated file.

	* plug-ins/winsnap: New Win32-only plug-in: whole display or
 	single window screenshot. Thanks to Craig Setera.

	* plug-ins/makefile.{cygwin,msc}: Add the curve_bend,