@@ -235,7 +235,7 @@ HELP
       if ((((Guide *) guides->data)->guide_ID == guide) &&
 	  (((Guide *) guides->data)->position >= 0))
 	{
-	  orientation = ((Guide *) guides->data)->orientation;
+	  orientation = ((Guide *) guides->data)->orientation - 1;
 	  success = TRUE;
 	  break;
 	}
